--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -3,10 +3,13 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.Hosting.Lifetime": "Information"
     }
   },
   "ConnectionStrings": {
     "DefaultConnection": "Data source=store.db"
+  },
+  "JWTSettings": {
+    "TokenKey": "this is a secret key and needs to be at least 12 characters"
   }
 }
